# tc3ffi_3457

./: README.md  ffi_builder.py  pyproject.toml
tc3ffi/: __init__.py  tcc.py
tests/: __init__.py  test_tcc.py
util/: build_tcc.py
