[tool.poetry]
name = "tc3ffi"
version = "0.1.0"
description = "Python cffi bindings for the Tiny C Compiler"
authors = ["Slavfox <slavfoxman@gmail.com>"]
license = "LGPL-2.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
cffi = "^1.13.2"

[tool.poetry.dev-dependencies]
colorama = "^0.4.3"
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
